# sp_vision_tutorial_26

lecture2/: CMakeLists.txt
lecture2/homework/: fmt_test.cpp  main.cpp  tools.cpp  tools.hpp
lecture2/part_1/: cpp_basics  tools.cpp
lecture2/part_2/: split_channels.cpp
lecture3/homework/: CMakeLists.txt  main.cpp
lecture3/homework/io/: CMakeLists.txt  my_camera.cpp  my_camera.hpp
lecture3/homework/tasks/: CMakeLists.txt
